# SMFS

./: .gitignore  .releaserc  CMakeLists.txt  LICENSE  README.md  add_filename_header.py  build.sh  concatenate_to_stdout.py  package-deb.sh  package-lock.json  package-rpm.sh  t  ws_test  ws_test.cpp
.github/workflows/: release.yml
include/: api_client.hpp  async_curl_client.hpp  directory_operations.hpp  file_operations.hpp  fuse_manager.hpp  fuse_operations.hpp  i_streaming_client.hpp  logger.hpp  lookup_operations.hpp  pipe.hpp  ring_buffer.hpp  sgfs.hpp  smfs_state.hpp  stream_context.hpp  stream_manager.hpp  util_operations.hpp  utils.hpp  virtualfs.hpp  websocket_client.hpp
src/: api_client.cpp  async_curl_client.cpp  directory_operations.cpp  file_operations.cpp  fuse_manager.cpp  fuse_operations.cpp  logger.cpp  lookup_operations.cpp  main.cpp  smfs_state.hpp  stream_manager.cpp  util_operations.cpp  utils.cpp  virtualfs.cpp  websocket_client.cpp  websocket_client.hpp
systemd/: smconfig.json  smfs.service
